dashboard.css
@import url(https://fonts.googleapis.com/css?family=Oswald:400);
.users-container {
    position: relative;
    padding: 1rem 0;
    border-right: 1px solid #e6ecf3;
    width: 300px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
}

.users-container label {
    text-align: left;
    font-weight: lighter;
    font-size: 15px;
    margin-left: 15px;
    margin-bottom: 5px;
}


/*Recent Users*/

.recent-users-container {
    position: relative;
    border-right: 1px solid #e6ecf3;
    width: 300px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
}

.recent-users {
    padding: 0;
    overflow-y: scroll;
    height: 370px;
}

.recent-users .person {
    position: relative;
    display: inline-flex;
    width: 100%;
    padding: 10px 1rem;
    cursor: pointer;
    border-bottom: 1px solid #f0f4f8;
}

.recent-users .person:hover {
    background-color: #ffffff;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#e9eff5), to(#ffffff));
    background-image: -webkit-linear-gradient(right, #e9eff5, #ffffff);
    background-image: -moz-linear-gradient(right, #e9eff5, #ffffff);
}

.recent-users .person.active-user {
    background-color: #ffffff;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#ececec), to(#ffffff));
    background-image: -webkit-linear-gradient(right, #ececec, #ffffff);
}

.recent-users .person:last-child {
    border-bottom: 0;
}

.recent-users .person .user {
    display: inline-block;
    position: relative;
    margin-right: 10px;
}

.recent-users .person .user img {
    width: 48px;
    height: 48px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
}

.recent-users .person p.name {
    font-weight: 600;
    font-size: .85rem;
    width: 180px;
    display: inline-block;
}

.invite-div {
    margin: auto;
}

.recent-users-button {
    margin-top: 15px;
    background-color: #0d6efd;
    border-radius: 10%;
    border-width: 0px;
    color: white;
}

.recent-users-button::before {
    content: 'Invite';
}

@media (max-width: 767px) {
    .recent-users .person {
        position: relative;
        display: inline-block;
        width: 100%;
        padding: 10px 1rem;
        cursor: pointer;
        border-bottom: 1px solid #f0f4f8;
    }
    .recent-users .person .user img {
        width: 30px;
        height: 30px;
    }
    .recent-users .person p.name {
        display: none;
    }
    .recent-users .person p.name-time .time {
        display: none;
    }
    .recent-users-container {
        width: 60px;
    }
    .recent-users-container label {
        display: none;
    }
    .recent-users-button {
        margin: auto;
        margin-left: 5px;
        border-radius: 100%;
        font-size: 10px;
    }
    .recent-users-button::before {
        content: '+';
    }
}


/*Users*/

.users {
    padding: 0;
    overflow-y: scroll;
    height: 370px;
}

.users .friend {
    position: relative;
    width: 100%;
    padding: 10px 1rem;
    cursor: pointer;
    border-bottom: 1px solid #f0f4f8;
}

.users .friend:hover {
    background-color: #ffffff;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#e9eff5), to(#ffffff));
    background-image: -webkit-linear-gradient(right, #e9eff5, #ffffff);
    background-image: -moz-linear-gradient(right, #e9eff5, #ffffff);
}

.users .friend.active-user {
    background-color: #ffffff;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#ececec), to(#ffffff));
    background-image: -webkit-linear-gradient(right, #ececec, #ffffff);
}

.users .friend:last-child {
    border-bottom: 0;
}

.users .friend .user {
    display: inline-block;
    position: relative;
    margin-right: 10px;
}

.users .friend .user img {
    width: 48px;
    height: 48px;
    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;
}

.users .friend .user .status {
    width: 10px;
    height: 10px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
    background: #e6ecf3;
    position: absolute;
    top: 0;
    right: 0;
}

.users .friend .user .status.online {
    background: #9ec94a;
}

.users .friend .user .status.offline {
    background: #c4d2e2;
}

.users .friend p.name {
    font-weight: 600;
    font-size: .85rem;
    display: inline-block;
}

@media (max-width: 767px) {
    .users .friend .user img {
        width: 30px;
        height: 30px;
    }
    .users .friend p.name {
        display: none;
    }
    .users .friend p.name-time .time {
        display: none;
    }
    .users-container {
        width: 60px;
    }
    .users-container label {
        display: none;
    }
}

.bg-custom-1 {
    background-color: #85144b;
}

.bg-custom-2 {
    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
}

.navbar-profile-img {
    position: relative;
    border-radius: 100%;
    margin-left: 5%;
    margin-bottom: 5%;
}

.img-prof {
    width: 40px;
    height: 40px;
    border-radius: 100%;
}

@media(max-width: 767px) {
    .navbar-profile-img {
        margin-left: 20%;
        margin-bottom: 25%;
    }
}

@media(max-width: 767px) {
    .img-prof {
        width: 30px;
        height: 30px;
    }
}

.navbar-profile-img.online {
    border: 2px solid #9ec94a;
}

.navbar-profile-img.away {
    border: 2px solid #e9ad2b;
}

.navbar-profile-img.hidden {
    border: 2px solid #c4d2e2;
}

.navbar-logout-button {
    position: absolute;
    right: 2%;
    top: 15%;
}

@media (max-width: 767px) {
    .navbar-logout-button {
        display: none;
    }
}

.navbar-status-dot {
    height: 10px;
    width: 10px;
    margin-left: 5px;
    border-radius: 50%;
    display: inline-block;
    position: absolute;
    cursor: pointer;
}

@media (max-width: 767px) {
    .navbar-status-dot {
        display: none;
    }
}

.navbar-status-dot.online {
    margin-top: 3px;
    background-color: #9ec94a;
}

.navbar-status-dot.away {
    background-color: #e9ad2b;
    margin-top: 17px;
}

.navbar-status-dot.hidden {
    background-color: #c4d2e2;
    margin-top: 31px;
}

.navbar-status-dot.clicked {
    border: 1px solid #929292;
}

.main-panel {
    display: inline-flex;
}

.profile-container {
    display: flex;
}

.status-dots {
    display: block;
}

.profile-user-info {
    margin-left: 25px;
}

.profile-username {
    font-weight: 500;
}

.profile-logout {
    margin-left: 250px;
    margin-bottom: 0;
    color: #ff0000;
    font-weight: 100;
    font-size: 10px;
    cursor: pointer;
}

.profile-description {
    margin-top: 30px;
    font-weight: 100;
    font-size: 12px;
}

.my-friends-label {
    font-weight: 700;
    text-align: center;
    font-size: 15px;
    margin-left: 15px;
    margin-bottom: 0;
}

@media (max-width: 767px) {
    .profile-username {
        display: none;
    }
    .profile-logout {
        display: none;
    }
    .profile-description {
        display: none;
    }
    .my-friends-label {
        display: none;
    }
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

 ::-webkit-scrollbar-thumb {
    background: linear-gradient(13deg, #f9d4ff 14%, #c7ceff 81%);
    border-radius: 15px;
}

 ::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
}

 ::-webkit-scrollbar-track {
    background: #ffffff;
    border-radius: 15px;
    box-shadow: inset 7px 18px 4px #f0f0f0;
}

